...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/block_text">

            <EditText
                android:id="@+id/codePremiumElement"
                style="@style/mainBlockText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Код" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setPremiumPremiumElementBtn"
            style="@style/mainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/premium_button"
...
