<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/switcherElementLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/leftSwitcherElementBtn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@drawable/left_transparent_btn"
        android:layout_margin="0dp"
        android:padding="10dp"
        android:text="left"
        android:textColor="@color/white"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/rightSwitcherElementBtn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_margin="0dp"
        android:padding="10dp"
        android:text="right"
        android:textColor="@color/white"/>

</LinearLayout>