<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_services_btn_add_service"
        style="@style/smallButton"
        android:gravity="center"
        android:text="@string/addServices" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_services_rv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" />
</LinearLayout>
