...
                    android:layout_height="wrap_content"
                    android:text="Записи" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Услуги" />
            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.custom.CustomViewPager
            android:id="@+id/activity_profile_vp"
            android:layout_width="match_parent"
...
