<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_service_ll_main"
    style="@style/DefaultPage"
    tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.editing.EditProfileActivity">

    <include layout="@layout/part_top_panel" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                style="@style/wideHorizontalBlock"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/activity_edit_profile_iv_avatar"
                    style="@style/profileAvatar"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@tools:sample/avatars" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_edit_profile_btn_add_photo"
                    android:layout_gravity="center"
                    style="@style/iconButton"
                    android:backgroundTint="@color/grey40"
                    app:icon="@drawable/icon_edit"
                    app:iconTint="@color/darkBlue" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialInputLayout"
                android:hint="Имя"
                app:startIconDrawable="@drawable/icon_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_edit_profile_et_name"
                    style="@style/MaterialInput"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialInputLayout"
                android:hint="Фамилия"
                app:startIconDrawable="@drawable/icon_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_edit_profile_et_surname"
                    style="@style/MaterialInput"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialSpinnerLayout"
                app:startIconDrawable="@drawable/icon_city">

                <AutoCompleteTextView
                    android:id="@+id/activity_edit_profile_sp_city"
                    style="@style/MaterialSpinner" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Телефон -->
            <LinearLayout
                style="@style/wideHorizontalBlock"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MaterialSpinnerLayout"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1.4"
                    app:startIconDrawable="@drawable/icon_phone_number">

                    <AutoCompleteTextView
                        android:id="@+id/activity_edit_profile_sp_code"
                        style="@style/MaterialSpinner" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MaterialInputLayout"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_edit_profile_et_phone"
                        style="@style/MaterialInput"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_edit_profile_til_code"
                style="@style/MaterialInputLayout"
                android:hint="Код"
                app:startIconDrawable="@drawable/icon_sms_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_edit_profile_et_code"
                    style="@style/MaterialInput"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_edit_profile_btn_verify"
                style="@style/mainButton"
                android:text="@string/verify_code" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_edit_profile_btn_resend"
                style="@style/outlineButton"
                android:text="@string/resend_code" />

            <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.custom.ProgressButton
                android:id="@+id/activity_edit_profile_btn_save"
                style="@style/mainButton"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/part_bottom_panel" />

</androidx.constraintlayout.widget.ConstraintLayout>